# Curosity

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  run.bat  run.ps1
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: AppShell.tsx  Footer.tsx  Sidebar.tsx  TopNav.tsx
frontend/src/context/: CrewRunContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: BuildersPage.tsx  DeploymentsPage.tsx  LandingPage.tsx  PlaceholderPage.tsx
src/engineering_team/: __init__.py  crew.py  env_load.py  main.py
src/engineering_team/api/: __init__.py  io_encoding.py  main.py  output_routes.py  runner.py  schemas.py
src/engineering_team/config/: agents.yaml  tasks.yaml
