[project]
name = "engineering_team"
version = "0.1.0"
description = "engineering_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "gradio>=5.22.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.scripts]
engineering_team = "engineering_team.main:run"
run_crew = "engineering_team.main:run"
train = "engineering_team.main:train"
replay = "engineering_team.main:replay"
test = "engineering_team.main:test"
curosity-api = "engineering_team.api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engineering_team"]

[tool.crewai]
type = "crew"
